--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,34 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Godesigner</title>
+<button style="text-align: right;
+padding: 0px 50px;
+margin-bottom: 30px;">@</button>
+<link rel="stylesheet" href="/Users/kabir/FRE-7773-Project/templates/static/css/styles.css">
+</head>
+<body>
+  <header>
+    <h1>Godesigner</h1>
+  </header>
+  <p>Let AI <br>help you design <br>your next home 🏠</p>
+    <button>Get Started ></button>
+  <img src="/Users/kabir/FRE-7773-Project/templates/static/images/Image_1.png" alt="Decorative Image" class="right-aligned-image" style="z-index: -1;height: 675px;">
+
+  <section class="products">
+ 
+      <img src="/Users/kabir/FRE-7773-Project/templates/static/images/Group_3.png" alt="Round Mirror"style="height:200px;padding-left:600px;top:-500px;">
+</section>
+<section class="products">
+
+      <img src="/Users/kabir/FRE-7773-Project/templates/static/images/Group_1.png" alt="Modern Armchair" style="height:300px; padding-top: 0px;padding-left: 150px;">
+
+  </section>
+  
+  <footer>
+    <!-- Footer content here -->
+  </footer>
+</body>
 </html>
